# LispHaskellIPad

./: DetailView.xib  Lisp.cabal  Lisp_Prefix.pch  Main.hs  MainWindow.xib  README  main.m
Classes/: DetailViewController.h  DetailViewController.m  LispAppDelegate.h  LispAppDelegate.m  PerformOMatic.h  PerformOMatic.m  RootViewController.h  RootViewController.m
Lisp.xcodeproj/: dpp.mode1v3  dpp.pbxuser  project.pbxproj
